copilot add. scottplot graph

--- a/UdpUnicast.csproj
+++ b/UdpUnicast.csproj
@@ -9,4 +9,8 @@
     <RootNamespace>UdpUnicast</RootNamespace>
   </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="ScottPlot.WinForms" Version="5.*" />
+    </ItemGroup>
+
 </Project>
