--- a/UdpUnicast.csproj
+++ b/UdpUnicast.csproj
@@ -7,6 +7,11 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>UdpUnicast</RootNamespace>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>0.0.0.2</FileVersion>
+    <PackageId>$(AssemblyName)</PackageId>
+    <Product>$(AssemblyName)</Product>
+    <AssemblyName>UDP_FTEST_$(FileVersion)</AssemblyName>
   </PropertyGroup>
 
     <ItemGroup>
