--- a/UdpUnicast.csproj
+++ b/UdpUnicast.csproj
@@ -15,6 +15,10 @@
   </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Costura.Fody" Version="6.0.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="ScottPlot.WinForms" Version="5.*" />
     </ItemGroup>
 
