--- a/.github/workflows/sensor-ci.yml
+++ b/.github/workflows/sensor-ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-and-analyze:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - name: Checkout repository
@@ -20,13 +20,13 @@ jobs:
         dotnet-version: '9.0.x'
 
     - name: Restore dependencies
-      run: dotnet restore udp_unicast.sln
+      run: dotnet restore udp_unicast.sln /p:EnableWindowsTargeting=true
 
     - name: Build
-      run: dotnet build --no-restore --configuration Release
+      run: dotnet build --no-restore --configuration Release /p:EnableWindowsTargeting=true
 
     - name: Run tests
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal /p:EnableWindowsTargeting=true
 
     - name: Run static analysis
       run: |
