--- a/.github/workflows/sensor-ci.yml
+++ b/.github/workflows/sensor-ci.yml
@@ -23,10 +23,10 @@ jobs:
       run: dotnet restore udp_unicast.sln /p:EnableWindowsTargeting=true
 
     - name: Build
-      run: dotnet build --no-restore --configuration Release /p:EnableWindowsTargeting=true
+      run: dotnet build udp_unicast.sln --no-restore --configuration Release /p:EnableWindowsTargeting=true
 
     - name: Run tests
-      run: dotnet test --no-build --verbosity normal /p:EnableWindowsTargeting=true
+      run: dotnet test udp_unicast.sln --no-build --verbosity normal /p:EnableWindowsTargeting=true
 
     - name: Run static analysis
       run: |
