--- a/.github/workflows/sensor-ci.yml
+++ b/.github/workflows/sensor-ci.yml
@@ -31,5 +31,5 @@ jobs:
     - name: Run static analysis
       run: |
         dotnet tool install --global dotnet-format
-        dotnet format udp_unicast.sln --check
+        dotnet format udp_unicast.sln 
         # StyleCop.Analyzers 또는 SonarQube 추가 가능
