--- a/UdpUnicast.csproj
+++ b/UdpUnicast.csproj
@@ -8,10 +8,18 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>UdpUnicast</RootNamespace>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>0.0.0.2</FileVersion>
+    <FileVersion>0.0.0.3</FileVersion>
     <PackageId>$(AssemblyName)</PackageId>
     <Product>$(AssemblyName)</Product>
     <AssemblyName>UDP_FTEST_$(FileVersion)</AssemblyName>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <CodeAnalysisRuleSet />
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <CodeAnalysisRuleSet />
   </PropertyGroup>
 
     <ItemGroup>
